--- a/style.css
+++ b/style.css
@@ -125,7 +125,12 @@ align-items: center;
     align-items: center;
     justify-content: center;
 }
-
+.contCarr{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 13px;
+}
 
 /* estilos de las galerias*/
 .ContenedorGalerias{
@@ -139,7 +144,7 @@ align-items: center;
     width: 95%;
     margin: auto;
     grid-gap: 10px;
-    padding: 40px 0;
+    padding: 10px 0;
     overflow: hidden;
   }
   .galeria a{
@@ -148,6 +153,16 @@ align-items: center;
     overflow: hidden;
     /* box-shadow: 0 0 6px rgba(0, 0, 0, .5); */
   }
+  .padd{
+    margin-bottom: 25px;
+  }
+.altMid{
+    margin-bottom: 15px;
+}
+.galeria2{
+    display: flex;
+    flex-direction: row;
+}
   .galeria .caru{
     width: 100%;
     vertical-align: top;
